--- a/AwesomeLeaderboard/Properties/launchSettings.json
+++ b/AwesomeLeaderboard/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -11,10 +11,8 @@
   "profiles": {
     "AwesomeLeaderboard": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7032;http://localhost:5006",
+      "applicationUrl": "http://localhost:1941",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -29,5 +27,3 @@
     }
   }
 }
-
-
